overflow, color text change and background fixed

--- a/css/opmaak.css
+++ b/css/opmaak.css
@@ -22,7 +22,8 @@ body{
   z-index: 1;
   opacity: 0;
   background-size: cover;
-  /*width: 740px;*/
+  overflow: hidden;
+  height: auto;
 }
 #morning{
   z-index: 1;
@@ -51,7 +52,7 @@ body{
 }
 #fases{
   text-align: center;
-  color: #bf4e19;
+  color: white;
 
 }
 #tiktak{
@@ -89,6 +90,7 @@ body{
   #fases{
     font-size: 16px;
     font-style: italic;
+    color: lightblue;
   }
 }
 
@@ -96,5 +98,6 @@ body{
   #fases{
     font-size: 18px;
     font-style: italic;
+    color: lightblue;
   }
 }
